--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ph-acc-job-portal-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
